Gestion multi-bases

--- a/Resources/views/Default/index.html.twig
+++ b/Resources/views/Default/index.html.twig
@@ -34,7 +34,7 @@ dhtmlxEvent(window,"load",function(){
         skin: "dhx_skyblue",
 */        width: 360,
         items: [
-            {id: 0, text: "{{ "Servers" | trans }}", icon: "server.png", selected: true},
+            {id: 0, text: "{{ "Servers" | trans }}", icon: "server.png"},
             {id: 1, text: "{{ "Alarms" | trans }}", icon: "alarms.png"}
         ]
     });
