--- a/Resources/views/Default/ribbon.json.twig
+++ b/Resources/views/Default/ribbon.json.twig
@@ -6,10 +6,14 @@
           "text_pos": "top", 
           "list":
           [
-             {   "type": "buttonSelect", 
-                 text:"", 
-                 "isbig": true, 
-                 "img": "48/ats.png", 
+             {   type:  "button", 
+                 text:  "", 
+                 isbig: true, 
+                 img:   "48/ats.png" 
+             },
+             {   type:  "buttonSelect", 
+                 text:  "", 
+                 img:   "view.png", 
                  items:
                  [ 
                     { id:"menu_jobs", text: "{{ "Jobs" | trans }}", img: "job.png" },
@@ -17,7 +21,6 @@
                     { id:"menu_audit", text: "{{ "Audit" | trans }}", img: "shield.png" },                    
                     { id:"menu_errors", text: "{{ "Runtimes" | trans }}", img: "bug.png" },
 //                    { id:"menu_errors", text: "{{ "Errors" | trans }}", img: "bug.png" },
-                    { id:"menu_requests", text: "{{ "Requests" | trans }}", img: "database.png" },
                     { id:"menu_calendars", text: "{{ "Calendars" | trans }}", img: "calendars.png" },
 /*                    {   type: "buttonSelect", 
                         text: "{{ "Calendars" | trans }}", 
@@ -50,7 +53,23 @@
                     }
                  ]
               },
-          ]
+             {   type:  "buttonSelect", 
+                 text:  "", 
+                 img:   "database.png", 
+                 items:
+                 [ 
+                    { id:"menu_requests", text: "{{ "Requests" | trans }}", img: "database.png" }
+                 ]
+              },
+             {   type:  "buttonSelect", 
+                 text:  "", 
+                 img:   "config.png", 
+                 items:
+                 [ 
+                    { id:"menu_templates", text: "{{ "Requests" | trans }}", img: "config.png" }
+                 ]
+              },
+            ]
       },      
      {   "type":"block", 
           "id": "current_filter",
