--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -104,17 +104,20 @@ function ClickRibbon (itemid,state) {
             });
         break;
     default:
-        if (itemid.substr(0,6)=='filter') {
+        if (itemid.substring(0,6)=='filter') {
             globalLayout.cells("a").progressOn();
             globalLayout.cells("b").progressOn();
 //            this.setItemText( 'filter', this.getListOptionText('filter',itemid));
             this.setItemText("current_filter",myRibbon.getItemOptionText('Filters',itemid));
-            dhx4.ajax.get( "{{ url('arii_session_update') }}?filter="+itemid.substr(7), function(){
+            dhx4.ajax.get( "{{ url('arii_session_update') }}?filter="+itemid.substring(7), function(){
                 GridRefresh();
             });
         }
-        else if (itemid.substr(0,2)=='DB') {
-            dhx4.ajax.get( "{{ url('arii_session_update') }}?database="+itemid.substr(2), function(loader,response) {
+        else if (itemid.substring(0,7)=='request') {
+            window.location = "{{ url('arii_ATS_requests') }}?id="+itemid.substring(8);
+        }
+        else if (itemid.substring(0,2)=='DB') {
+            dhx4.ajax.get( "{{ url('arii_session_update') }}?database="+itemid.substring(2), function(loader,response) {
                 dhtmlx.message({
                     type: "Notice",
                     text: loader.xmlDoc.responseText,
