Gestion interactive des bases de donnees

--- a/Resources/views/Default/ribbon.json.twig
+++ b/Resources/views/Default/ribbon.json.twig
@@ -69,43 +69,12 @@
                  items:
                  [ 
                     { id:"menu_templates", text: "{{ "Templates" | trans }}", img: "package.png" },
-                    { id:"menu_cron", text: "{{ "Cron converter" | trans }}", img: "cron.png" },
+//                    { id:"menu_cron", text: "{{ "Cron converter" | trans }}", img: "cron.png" },
                     { id:"menu_config", text: "{{ "Config" | trans }}", img: "config.png" },
                  ]
-              },
+              }              
             ]
       },      
-     {   "type":"block", 
-          "id": "current_filter",
-          {% if (app.session.get('user_filter')|length) >0 %}
-          {% set filter = app.session.get('user_filter') %}
-          text:"{{ filter.name }}",
-          {% else %}
-          text:"{{ "Filter" | trans }}", 
-          {% endif %}
-          "text_pos": "bottom", 
-          "list":
-          [
-             {   "type": "buttonSelect", 
-                 text:"",
-                 "id": "Filters",
-                 "isbig": true, 
-                 "img": "48/search.png", 
-                 items:
-                 [ 
-     {% if (app.session.get('UserFilters')|length) >0 %}
-    {% set filter = app.session.get('user_filter') %}     
-       {% set filters = app.session.get('UserFilters') %}     
-        {% for k,filter in filters %}
-            { id:"filter_{{ filter.id }}", text: "{{ filter.name }}" },
-        {% endfor %}
-    {% endif %}
-                  ]
-              },
-              {id:"filter_edit","type":"button",text:"","img":"edit.png","tooltip": "{{ "Edit filter" | trans }}" },
-              {id:"filter_all","type":"button",text:"","img":"zoom_out.png"},
-          ]
-      },
       {   "type":"block", 
           text:"{{ "History" | trans }}", 
           "text_pos": "bottom", 
@@ -154,9 +123,12 @@
                   list : 
                   [   {id:"chained","type":"buttonTwoState",text:"","img":"ordered.png"},
                       {id:"only_warning","type":"buttonTwoState",text:"","img":"warning.png" /*, state: true*/ }
+,                      
+                  ]
+              }
 {% if Databases|length > 1 %}
 ,
- {   id: "ref_past", 
+              {   id: "database", 
                   "type":"buttonSelect", 
                   text:"", 
                   "img": "database.png",
@@ -166,10 +138,27 @@
 {id:"{{ database.id }}", text:"{{ database.name }}" },
 {% endfor %}
                   ]
-                }
+               },
 {% endif %}
+            {   "type": "buttonSelect", 
+                 text:"",
+                 "id": "Filters",
+                 "img": "zoom.png", 
+                 items:
+                 [ 
+              {id:"filter_edit","type":"button",text:"{{ "New" | trans }}","img":"zoom_in.png","tooltip": "{{ "Edit filter" | trans }}" },
+     {% if (app.session.get('UserFilters')|length) >0 %}
+            { id:"sepf0", type: "separator" },    
+    {% set filter = app.session.get('user_filter') %}     
+       {% set filters = app.session.get('UserFilters') %}     
+        {% for k,filter in filters %}
+            { id:"filter_{{ filter.id }}", text: "{{ filter.name }}" },
+        {% endfor %}
+    {% endif %}
                   ]
-              }
+              },
+              {id:"filter_all","type":"button",tooltip:"{{ "All" | trans }}","img":"zoom_out.png"}
+              
           ]
       }
    ]
