--- a/Resources/views/Default/ribbon.json.twig
+++ b/Resources/views/Default/ribbon.json.twig
@@ -6,7 +6,8 @@
           "text_pos": "top", 
           "list":
           [
-             {   type:  "button", 
+             {   id: "menu_index",
+                 type:  "button", 
                  text:  "", 
                  isbig: true, 
                  img:   "48/ats.png" 
