Corrections pour PHP 5.5

--- a/Resources/views/Config/config.html.twig
+++ b/Resources/views/Config/config.html.twig
@@ -22,7 +22,7 @@
         <tr><th>{{ "database" | trans }}</th><td>{{ db.dbname }}</td></tr>
         <tr><th>{{ "host" | trans }}</th><td>{{ db.host }}</td></tr>
         <tr><th>{{ "port" | trans }}</th><td>{{ db.port }}</td></tr>
-        <tr><th>{{ "user" | trans }}</th><td>{{ db.driver }}</td></tr>
+        <tr><th>{{ "user" | trans }}</th><td>{{ db.user }}</td></tr>
     </table>
 </div>    
 </div>
