Ajout de requetes et de fonctions internes

--- a/Resources/views/Requests/bootstrap.html.twig
+++ b/Resources/views/Requests/bootstrap.html.twig
@@ -32,7 +32,7 @@
         {% endif %}
         <th>{{ id }}</th>
         {% for cell in row %}
-            <td>{{ cell }}</td>
+            <td>{{ cell | raw }}</td>
         {% endfor %}
         </tr>
     {% endfor %}
