--- a/Resources/views/Templates/index.html.twig
+++ b/Resources/views/Templates/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 <script type="text/javascript">
 dhtmlxEvent(window,"load",function() { 
-    globalLayout = new dhtmlXLayoutObject(document.body,"2U");  
+    globalLayout = new dhtmlXLayoutObject(document.body,"3L");  
     globalLayout.cells("a").hideHeader();
     globalLayout.cells("a").setWidth(410);
     globalLayout.cells("b").hideHeader();
@@ -19,8 +19,18 @@ dhtmlxEvent(window,"load",function() {
     myRibbon.attachEvent("onClick", ClickRibbon );
     myRibbon.attachEvent("onStateChange", StateRibbon );
     myRibbon.attachEvent("onClick", ClickRibbon );
+
+    var myGrid = globalLayout.cells("b").attachGrid();
+    myGrid.setImagePath( "{{ asset('bundles/ariicore/images/') }}");
+    myGrid.setHeader("{{ "Folder" | trans }},{{ "File" | trans }},{{ "Date" | trans }},{{ "Size" | trans }}");
+    myGrid.attachHeader("#select_filter,#text_filter,#text_filter,#numeric_filter");
+    myGrid.setColAlign("left,left,right,right");
+    myGrid.setInitWidths("*,*,140,100");
+    myGrid.setColTypes("ro,ro,ro,ro");
+    myGrid.init();
+    myGrid.load("{{ url('xml_ATS_templates_files') }}");
     
-    var myTab = globalLayout.cells("b").attachTabbar();
+    var myTab = globalLayout.cells("c").attachTabbar();
     myTab.addTab("jil","JIL","100px", null, true);
     myTab.addTab("diff","{{ "Diff." | trans }}","100px");
 
@@ -29,9 +39,28 @@ dhtmlxEvent(window,"load",function() {
     myTree.load( "{{ url('xml_ATS_templates_tree') }}" );
 
     myTree.attachEvent("onClick",function(id){
-        myTab.cells("jil").attachURL("{{ url('arii_ATS_template') }}?template="+id);
-        myTab.cells("diff").attachURL("{{ url('arii_ATS_template_diff') }}?template="+id);
+        globalLayout.cells("b").progressOn();   
+        dhx4.ajax.get("{{ url('html_ATS_template_recalc') }}?config="+encodeURIComponent(id),function(loader,response){
+            dhtmlx.message({
+            type: "Notice",
+            expire: 10000,
+            width: "500px",
+            text: loader.xmlDoc.responseText });
+            myGrid.load("{{ url('xml_ATS_templates_files') }}", function() {
+                globalLayout.cells("b").progressOff();
+            });
+        });
     })    
+    
+    myTab.attachEvent("onContentLoaded", function(id){
+        globalLayout.cells("c").progressOff();
+    });
+    
+    myGrid.attachEvent("onRowSelect",function(id){    
+        globalLayout.cells("c").progressOn();
+        myTab.cells("jil").attachURL("{{ url('arii_ATS_template_read') }}?file="+encodeURIComponent(id));
+        myTab.cells("diff").attachURL("{{ url('arii_ATS_template_diff') }}?file="+encodeURIComponent(id));
+    });
     
     globalLayout.cells("a").hideHeader();
     myTab.cells("jil").attachURL('{{ asset('/bundles/ariicore/images/arii.jpg') }}'); 
