--- a/Resources/views/Default/bootstrap.html.twig
+++ b/Resources/views/Default/bootstrap.html.twig
@@ -1,5 +1,5 @@
 {# src/Arii/JIDBundle/Resources/views/Default/history.html.twig #}
-{% extends "::base.html.twig" %}
+{% extends "AriiCoreBundle::base.html.twig" %}
 {% block head %}
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="{{ asset('bootstrap/css/bootstrap.min.css') }}">
