--- a/Resources/views/Default/index.html.twig
+++ b/Resources/views/Default/index.html.twig
@@ -1,7 +1,6 @@
 {# src/Arii/JIDBundle/Resources/views/Default/history.html.twig #}
 {% extends "AriiATSBundle::layout.html.twig" %}
 {% block body %}
-<body>
 <script type="text/javascript">
 var max_history = 0; // pas d'historique
 var chained = 0; // que des standalone
@@ -35,8 +34,8 @@ dhtmlxEvent(window,"load",function(){
 */        width: 410,
         items: [
 //            {id: 'jobs', text: "{{ "Jobs" | trans }}", icon: "jobs.png"},
-            {id: 'servers', text: "{{ "Servers" | trans }}", icon: "server.png"},
-            {id: 'alarms', text: "{{ "Alarms" | trans }}", icon: "alarms.png"}
+            {id: 0, text: "{{ "Servers" | trans }}", icon: "server.png"},
+            {id: 1, text: "{{ "Alarms" | trans }}", icon: "alarms.png"}
         ]
     });
     mySidebar.attachEvent("onBubbleClick", function(id, value){
@@ -140,21 +139,20 @@ function GridRefresh() {
     myServers.load( "{{ url('xml_ATS_processes_pie') }}", function() {
         val = myServers.get("STOPPED");
         if (val["PROCESSES"]>0)
-            mySidebar.cells('servers').setBubble(val["PROCESSES"]);
+            mySidebar.cells(0).setBubble(val["PROCESSES"]);
         else
-            mySidebar.cells('servers').clearBubble();
+            mySidebar.cells(0).clearBubble();
     });
 
     myAlarms.load( "{{ url('xml_ATS_alarms_pie') }}?only_warning="+1, function() {
         val = myAlarms.get("OPEN");
         if (val["JOBS"]>0)
-            mySidebar.cells('alarms').setBubble(val["JOBS"]);
+            mySidebar.cells(1).setBubble(val["JOBS"]);
         else
-            mySidebar.cells('alarms').clearBubble();
+            mySidebar.cells(1).clearBubble();
     });
     
     globalLayout.progressOff();
 }
 </script>
-</body>
 {% endblock %}
