--- a/Resources/views/Default/ribbon.json.twig
+++ b/Resources/views/Default/ribbon.json.twig
@@ -122,8 +122,7 @@
               {   id : "group_2", 
                   type : "group", 
                   list : 
-                  [   {id:"chained","type":"buttonTwoState",text:"","img":"ordered.png"},
-                      {id:"only_warning","type":"buttonTwoState",text:"","img":"warning.png" /*, state: true*/ }
+                  [   {id:"only_warning","type":"buttonTwoState",text:"","img":"warning.png", state: true }
 ,                      
                   ]
               },
