--- a/Resources/views/Requests/bootstrap.html.twig
+++ b/Resources/views/Requests/bootstrap.html.twig
@@ -14,12 +14,11 @@
 <body>
 <div class="container-fluid">
 <div class="jumbotron">
-<img src="{{ asset('logo.png') }}"/>
+<img style="float: right;" src="{{ asset('logo.png') }}"/>
   <h1>{{ result.title | trans }}</h1>
   <p>{{ result.description | trans }}</p>
   {% set current_db = app.session.get('database') %}[{{ current_db.name }}]
 </div>
-
 <div class="table-responsive">
 {% if result.count > 0 %}
   <table id="myTable" class="table tablesorter">
